# finparse

./: log.py  pyproject.toml
cards/: isracard.py  models.py
finparse/: firefly.py  main.py  models.py
finparse/cards/: cal.py  isracard.py  models.py
tests/: decrypt.sh  encrypt.sh  test_parsing.py
